--- a/index.html
+++ b/index.html
@@ -32,10 +32,14 @@
       <ul class="info">
         <li class="nav-item">
           <a href="mailto:info@devstudio.com" class="mail"
-            >info@devstudio.com</a
+            ><svg width="16" height="12">
+              <use href="./images/icons.svg#mail"></use>
+            </svg> info@devstudio.com</a
           >
         </li>
-        <li class="nav-item"><a href="tel:+380961111111" class="tel">+38 096 111 11 11</a></li>
+        <li class="nav-item"><a href="tel:+380961111111" class="tel"><svg width="16" height="12">
+          <use href="./images/icons.svg#tel"></use>
+        </svg>+38 096 111 11 11</a></li>
       </ul>
       </div>
     </header>
@@ -53,6 +57,11 @@
         <h2 class="our-benefits">Наші переваги</h2>
         <ul class="benefit-list">
           <li class="benefits-sum">
+            <div class="detail">
+            <svg class="details" width="70" height="70">
+              <use href="./images/icons.svg#antenna"></use>
+            </svg>
+          </div>
             <h3 class="benefits-title">Увага до деталей</h3>
             <p class="benefits-text">
               Ідейні міркування, і навіть початок повсякденної роботи з
@@ -60,6 +69,11 @@
             </p>
           </li>
           <li class="benefits-sum">
+            <div class="detail">
+              <svg class="details" width="70" height="70">
+                <use href="./images/icons.svg#clock"></use>
+              </svg>
+            </div>
             <h3 class="benefits-title">Пунктуальність</h3>
             <p class="benefits-text">
               Завдання організації, особливо рамки і місце навчання кадрів тягне
@@ -67,12 +81,22 @@
             </p>
           </li>
           <li class="benefits-sum">
+            <div class="detail">
+              <svg class="details" width="70" height="70">
+                <use href="./images/icons.svg#diagram"></use>
+              </svg>
+            </div>
             <h3 class="benefits-title">Планування</h3>
             <p class="benefits-text">
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
           <li class="benefits-sum">
+            <div class="detail">
+              <svg class="details" width="70" height="70">
+                <use href="./images/icons.svg#astronaut"></use>
+              </svg>
+            </div>
             <h3 class="benefits-title">Сучасні технології</h3>
             <p class="benefits-text">
               Значимість цих проблем настільки очевидна, що реалізація планових
@@ -126,8 +150,48 @@
               width="270"
               height="260"
             />
+            <div class="social-cont">
             <h3 class="names">Ігор Дем'яненко</h3>
             <p class="team-text">Product Designer</p>
+            <ul class="social">
+              <li class="social-item">
+                <a class="social-link" href="https://www.instagram.com"
+                rel="noreferrer nooppener nofollow"
+                target="_blank">
+                  <svg class="" width="20" height="20">
+                    <use href="./images/icons.svg#instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="social-link" href="https://www.twitter.com"
+                rel="noreferrer nooppener nofollow"
+                target="_blank">
+                  <svg class="" width="20" height="20">
+                    <use href="./images/icons.svg#twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="social-link" href="https://www.facebook.com"
+                rel="noreferrer nooppener nofollow"
+                target="_blank">
+                  <svg class="" width="20" height="20">
+                    <use href="./images/icons.svg#facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="social-link" href="https://www.linkedin.com"
+                rel="noreferrer nooppener nofollow"
+                target="_blank">
+                  <svg class="" width="20" height="20">
+                    <use href="./images/icons.svg#linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
           </li>
           <li class="person-text">
             <img
@@ -136,8 +200,48 @@
               width="270"
               height="260"
             />
+            <div class="social-cont">
             <h3 class="names">Ольга Рєпіна</h3>
             <p class="team-text">Frontend Developer</p>
+            <ul class="social">
+              <li class="social-item">
+                <a class="social-link" href="https://www.instagram.com"
+                rel="noreferrer nooppener nofollow"
+                target="_blank">
+                  <svg class="" width="20" height="20">
+                    <use href="./images/icons.svg#instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="social-link" href="https://www.twitter.com"
+                rel="noreferrer nooppener nofollow"
+                target="_blank">
+                  <svg class="" width="20" height="20">
+                    <use href="./images/icons.svg#twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="social-link" href="https://www.facebook.com"
+                rel="noreferrer nooppener nofollow"
+                target="_blank">
+                  <svg class="" width="20" height="20">
+                    <use href="./images/icons.svg#facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="social-link" href="https://www.linkedin.com"
+                rel="noreferrer nooppener nofollow"
+                target="_blank">
+                  <svg class="" width="20" height="20">
+                    <use href="./images/icons.svg#linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
           </li>
           <li class="person-text">
             <img
@@ -146,8 +250,48 @@
               width="270"
               height="260"
             />
+            <div class="social-cont">
             <h3 class="names">Микола Тарасов</h3>
             <p class="team-text">Marketing</p>
+            <ul class="social">
+              <li class="social-item">
+                <a class="social-link" href="https://www.instagram.com"
+                rel="noreferrer nooppener nofollow"
+                target="_blank">
+                  <svg class="" width="20" height="20">
+                    <use href="./images/icons.svg#instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="social-link" href="https://www.twitter.com"
+                rel="noreferrer nooppener nofollow"
+                target="_blank">
+                  <svg class="" width="20" height="20">
+                    <use href="./images/icons.svg#twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="social-link" href="https://www.facebook.com"
+                rel="noreferrer nooppener nofollow"
+                target="_blank">
+                  <svg class="" width="20" height="20">
+                    <use href="./images/icons.svg#facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="social-link" href="https://www.linkedin.com"
+                rel="noreferrer nooppener nofollow"
+                target="_blank">
+                  <svg class="" width="20" height="20">
+                    <use href="./images/icons.svg#linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
           </li>
           <li class="person-text">
             <img
@@ -156,17 +300,109 @@
               width="270"
               height="260"
             />
+            <div class="social-cont">
             <h3 class="names">Михайло Єрмаков</h3>
             <p class="team-text">UI Designer</p>
+            <ul class="social">
+              <li class="social-item">
+                <a class="social-link" href="https://www.instagram.com"
+                rel="noreferrer nooppener nofollow"
+                target="_blank">
+                  <svg class="" width="20" height="20">
+                    <use href="./images/icons.svg#instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="social-link" href="https://www.twitter.com"
+                rel="noreferrer nooppener nofollow"
+                target="_blank">
+                  <svg class="" width="20" height="20">
+                    <use href="./images/icons.svg#twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="social-link" href="https://www.facebook.com"
+                rel="noreferrer nooppener nofollow"
+                target="_blank">
+                  <svg class="" width="20" height="20">
+                    <use href="./images/icons.svg#facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-item">
+                <a class="social-link" href="https://www.linkedin.com"
+                rel="noreferrer nooppener nofollow"
+                target="_blank">
+                  <svg class="" width="20" height="20">
+                    <use href="./images/icons.svg#linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
           </li>
         </ul>
         </div>
       </section>
-    </main>
+
+<section class="clients">
+  <h2 class="clients-title">Постійні клієнти</h2>
+  <ul class="clients-list">
+    <li class="clients-item">
+      <a class="clients-link" href="">
+        <svg width="106" height="60">
+          <use href="./images/icons.svg#logo"></use>
+        </svg>
+      </a>
+    </li>
+    <li class="clients-item">
+      <a class="clients-link" href="">
+        <svg width="106" height="60">
+          <use href="./images/icons.svg#logo-1"></use>
+        </svg>
+      </a>
+    </li>
+    <li class="clients-item">
+      <a class="clients-link" href="">
+        <svg width="106" height="60">
+          <use href="./images/icons.svg#logo-2"></use>
+        </svg>
+      </a>
+    </li>
+    <li class="clients-item">
+      <a class="clients-link" href="">
+        <svg width="106" height="60">
+          <use href="./images/icons.svg#logo-3"></use>
+        </svg>
+      </a>
+    </li>
+    <li class="clients-item">
+      <a class="clients-link" href="">
+        <svg width="106" height="60">
+          <use href="./images/icons.svg#logo-4"></use>
+        </svg>
+      </a>
+    </li>
+    <li class="clients-item">
+      <a class="clients-link" href="">
+        <svg width="106" height="60">
+          <use href="./images/icons.svg#logo-5"></use>
+        </svg>
+      </a>
+    </li>
+  </ul>
+</section>
+
+  </main>
+
+
+
     <footer class="footer">
       <div class="container footer-container">
-      <a href="" class="footer-web"><span class="webt">Web</span>Studio</a>
       <address class="footer-address">
+        <a href="" class="footer-web"><span class="webt">Web</span>Studio</a>
         <ul class="footer-nav">
           <li class="footer-text">
             <a
@@ -187,6 +423,48 @@
           </li>
         </ul>
       </address>
+      <div class="footer-cont">
+        <h3 class="footer-title">приєднуйтесь</h3>
+          <ul class="footer-list">
+            <li class="footer-item">
+              <a class="footer-link" href="https://www.instagram.com"
+              rel="noreferrer nooppener nofollow"
+              target="_blank">
+                <svg width="20" height="20">
+                  <use href="./images/icons.svg#instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-item">
+              <a class="footer-link" href="https://www.twitter.com"
+              rel="noreferrer nooppener nofollow"
+              target="_blank">
+                <svg width="20" height="20">
+                  <use href="./images/icons.svg#twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-item">
+              <a class="footer-link" href="https://www.facebook.com"
+              rel="noreferrer nooppener nofollow"
+              target="_blank">
+                <svg width="20" height="20">
+                  <use href="./images/icons.svg#facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-item">
+              <a class="footer-link" href="https://www.linkedin.com"
+              rel="noreferrer nooppener nofollow"
+              target="_blank">
+                <svg width="20" height="20">
+                  <use href="./images/icons.svg#linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        
+      </div>
       </div>
     </footer>
   </body>
