виконана робота над помилками

--- a/portfolio.html
+++ b/portfolio.html
@@ -70,9 +70,8 @@
               ><img src="./images/portfolio2.jpg" alt="" width="370" />
               <div class="port-div">
               <h2 class="port-titles">Постер New Orlean vs Golden Star</h2>
-              <p class="port-text">Дизайн</p></a
-            >
-          </div>
+              <p class="port-text">Дизайн</p>
+          </div></a>
           </li>
           <li class="port-item">
             <a href="" class="port-link"
