--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
       <ul class="info">
         <li class="nav-item">
           <a href="mailto:info@devstudio.com" class="mail"
-            ><svg width="16" height="12">
+            ><svg class="mail-svg" width="16" height="12">
               <use href="./images/icons.svg#mail"></use>
             </svg> info@devstudio.com</a
           >
         </li>
-        <li class="nav-item"><a href="tel:+380961111111" class="tel"><svg width="16" height="12">
+        <li class="nav-item"><a href="tel:+380961111111" class="tel"><svg class="tel-svg" width="16" height="12">
           <use href="./images/icons.svg#tel"></use>
         </svg>+38 096 111 11 11</a></li>
       </ul>
