--- a/index.html
+++ b/index.html
@@ -349,6 +349,7 @@
 
 <section class="clients">
   <h2 class="clients-title">Постійні клієнти</h2>
+  <div class="clients-cont">
   <ul class="clients-list">
     <li class="clients-item">
       <a class="clients-link" href="">
@@ -393,6 +394,7 @@
       </a>
     </li>
   </ul>
+  </div>
 </section>
 
   </main>
