внесено зміни в хедер

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
       <nav class="navigation">
         <a href="/" class="web"><span class="webt">Web</span>Studio</a>
         <ul class="headerlist">
-          <li class="nav-item"><a href="./index.html" class="studio">Студія</a></li>
+          <li class="nav-item"><a href="./index.html" class="studio ">Студія</a></li>
           <li class="nav-item"><a href="./portfolio.html" class="port current">Портфоліо</a></li>
           <li class="nav-item"><a href="" class="cont">Контакти</a></li>
         </ul>
@@ -32,12 +32,12 @@
       <ul class="info">
         <li class="nav-item">
           <a href="mailto:info@devstudio.com" class="mail"
-            ><svg width="16" height="12">
+            ><svg class="mail-svg" width="16" height="12">
               <use href="./images/icons.svg#mail"></use>
             </svg> info@devstudio.com</a
           >
         </li>
-        <li class="nav-item"><a href="tel:+380961111111" class="tel"><svg width="16" height="12">
+        <li class="nav-item"><a href="tel:+380961111111" class="tel"><svg class="tel-svg" width="16" height="12">
           <use href="./images/icons.svg#tel"></use>
         </svg>+38 096 111 11 11</a></li>
       </ul>
